@@ -11,39 +11,38 @@
 			<version>3.0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>6.9.8</version>
-		</dependency>
-		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.19</version>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
 				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFile>src/test/resources/default.xml</suiteXmlFile>
-					</suiteXmlFiles>
-					<parallel>methods</parallel>
-					<!-- <threadCount>5</threadCount> -->
-					<!-- <forkCount>5</forkCount> -->
-					<!-- <reuseForks>true</reuseForks> -->
-					<!-- <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> -->
-					<!-- <properties> -->
-					<!-- <property> -->
-					<!-- <name>surefire.testng.verbose</name> -->
-					<!-- <value>10</value> -->
-					<!-- </property> -->
-					<!-- </properties> -->
+					<testSourceDirectory>${basedir}/src/main/java/</testSourceDirectory>
+					<testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
+					<groups>TestCategories.ChromeTest</groups>
+					<includes>
+						<include>**/*.java</include>
+					</includes>
 				</configuration>
 			</plugin>
+			<!-- <plugin> -->
+			<!-- <groupId>org.apache.maven.plugins</groupId> -->
+			<!-- <artifactId>maven-surefire-report-plugin</artifactId> -->
+			<!-- <version>2.19</version> -->
+			<!-- <configuration> -->
+			<!-- <suiteXmlFiles> -->
+			<!-- <suiteXmlFile>src/test/resources/default.xml</suiteXmlFile> -->
+			<!-- </suiteXmlFiles> -->
+			<!-- <parallel>methods</parallel> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
